# Mue-Heroes

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/logs/: submissions.jsonl
backend/src/: episode.rs  kdapp.rs  lib.rs  main.rs  pki.rs  types.rs
backend/src/engine/: game.rs  kdapp.rs  merkle.rs  mod.rs
backend/src/handlers/: events.rs  game.rs  health.rs  leaderboard.rs  mod.rs  submission.rs  submit_mine.rs  submit_witness.rs
backend/src/state/: lib.rs  pki.rs  types.rs
backend/tests/: leaderboard_tests.rs
frontend/: README.md
frontend/mue-heroes-react/: .gitignore  index.html  package-lock.json  package.json
frontend/mue-heroes-react/src/: App.jsx  index.css  main.jsx  style.css
frontend/mue-heroes-react/src/components/: DevSandbox.jsx  EventsPanel.jsx  HealthPill.jsx  Leaderboard.jsx
frontend/mue-heroes-react/src/lib/: api.js
frontend/mue-heroes-ui/: index.html  package-lock.json  package.json  script.js  style.css  tailwind.config.js
frontend/mue-heroes-ui/src/: App.css  App.tsx  index.css
frontend/mue-heroes-ui/src/components/: HeroHeader.tsx  LeaderboardCard.tsx
