[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
dotenvy = "0.15"
blake2 = "0.10"


borsh = "0.10"
hex = "0.4"
rand = "0.8"
chrono = "0.4.41"

[[bin]]
name = "simulate_submissions"
path = "src/bin/simulate_submissions.rs"

